rgw: avoid 0-length result gaps when non-vis b-i entries dominate

Attempt a workaround for invalid, empty bucket listing results
induced by sharded-bucket readahead optimizations.

The proximate cause if failure is failure to return any results
due to sparse/empty visible entry counts in some shards, where
non-visible entries are present.

The current change addresses the currently reproducible
case, plus cognate cases with other !visible entries,
which were being handled similarly.

changes suggested in reviews by Eric and Casey:

* there is no fixed bound on restarts, so long as marker advances
* marker advance can/should be moved ahead of remaining continue case
* rename check_ns (which is the result of '(params.ns == objs.ns)'),
  hence means something like 'namespaces match'

Fixes: https://tracker.ceph.com/issues/43180

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>